--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,11 @@ environment:
   sdk: ">=2.1.0<3.0.0"
 
 dependencies:
+  modal_progress_hud: ^0.1.3
+  animated_text_kit: ^2.2.0
+  firebase_core: ^0.5.0
+  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.0+1
   flutter:
     sdk: flutter
 
